<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <LinearLayout
            android:id="@+id/transactionDetailContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:visibility="@{ viewModel.isDataLoaded }">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:visibility="@{ viewModel.isDataLoaded }">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{ () -> viewModel.goBack() }"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    style="@style/PrimaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/details" />

            </androidx.appcompat.widget.Toolbar>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/descriptionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/merchantNameTextView"
                    style="@style/PrimaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:text="@{ viewModel.transaction.merchant.name }"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Blue Bottle Coffee" />

                <TextView
                    android:id="@+id/merchantCategoryTextView"
                    style="@style/SubheaderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:text="@{ viewModel.transaction.merchant.merchantCategory.name }"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/merchantNameTextView"
                    tools:text="Restaurants" />

                <TextView
                    android:id="@+id/transaction_amount_text_view"
                    style="@style/PrimaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:text="@{ TransactionUtils.parseAmount(viewModel.transaction.amount) }"
                    app:layout_constraintBottom_toBottomOf="@id/merchantCategoryTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/merchantNameTextView"
                    tools:text="$1,000.00" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detailsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/white"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/detailsHeader"
                    style="@style/SecondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:text="@string/details"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/purchaseSubheader"
                    style="@style/SubheaderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/purchased_at"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detailsHeader" />

                <TextView
                    android:id="@+id/purchaseTime"
                    style="@style/SecondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:text="@{ TransactionUtils.parseTime(viewModel.transaction.purchaseTime) }"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/purchaseSubheader"
                    tools:text="Feb 27, 6:45 AM" />

                <TextView
                    android:id="@+id/merchantSubheader"
                    style="@style/SubheaderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/merchant_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/purchaseSubheader" />

                <TextView
                    android:id="@+id/merchantName"
                    style="@style/SecondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:text="@{ viewModel.transaction.merchant.name }"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/merchantSubheader"
                    tools:text="Blue Bottle Coffee" />

                <TextView
                    android:id="@+id/websiteSubheader"
                    style="@style/SubheaderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/website"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/merchantSubheader" />

                <TextView
                    android:id="@+id/website"
                    style="@style/ClickableText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:onClick="@{ () -> viewModel.openWebsiteUrl(viewModel.transaction.merchant.website) }"
                    android:text="@{ viewModel.transaction.merchant.website }"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/websiteSubheader"
                    tools:text="www.bluebottlecoffee.com" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/accountingContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/white"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/accountingHeader"
                    style="@style/SecondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/accounting"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/accountingCategorySubheader"
                    style="@style/SubheaderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:text="@{ viewModel.transaction.integration.name + ` Category`}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/accountingHeader"
                    tools:text="QuickBooks Category" />

                <TextView
                    android:id="@+id/accountingCategory"
                    style="@style/ClickableText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:onClick="@{ () -> viewModel.launchCategoryPicker() }"
                    android:text="@{ viewModel.transaction.integration.category.name == null ? viewModel.currentCategory.name : viewModel.transaction.integration.category.name }"
                    app:drawableEndCompat="@drawable/ic_arrow_right"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/accountingCategorySubheader"
                    tools:text="Meals &amp; Entertainment" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="@{ !viewModel.errorMessage.isEmpty() &amp;&amp; !viewModel.isLoading &amp;&amp; !viewModel.isDataLoaded }">

            <TextView
                android:id="@+id/errorMessageTextView"
                style="@style/PrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@{ viewModel.errorMessage }" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:onClick="@{ () -> viewModel.getTransactionDetails(viewModel.transactionId) }"
                android:text="@string/retry"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/errorMessageTextView" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{ viewModel.isLoading }" />

    </FrameLayout>

    <data>

        <import type="com.example.brexmobilechallenge.ui.util.TransactionUtils" />

        <variable
            name="viewModel"
            type="com.example.brexmobilechallenge.ui.transactiondetail.viewmodel.TransactionDetailViewModel" />
    </data>

</layout>